# bmstu_sem4

./: .gitignore  README.md
ASM/: Dropped Text.txt
ASM/For_compile/: lrf-1-1.asm
ASM/Help/: Help.txt  myHelp
ASM/Lab03/: lab3.asm
ASM/Lab03_CV_2/: 333.asm  FILE3.TXT  FILE7.TXT  FILE8.TXT  LR.TXT  ~$Я МОДУЛЬ 1 ЛАБОРАТОРНАЯ РАБОТА 03 CV2.doc
ASM/Lab03_DemoRK/: task.asm  Составить программу копирования из массива слов  X.docx
ASM/Lab04_with_four_tasks/: ~$ЛР05.doc  ЛР05.doc
ASM/Lab05_factorial/: LABA.CRF  compile.bat  laba.asm  lrf-1-1.asm  lrf-1-2.asm  lrf-2-1.asm  lrf-2-2.asm
ASM/Lab07_menu/: compile.bat  input.asm  main.asm  menu.asm
ASM/Lab08_TD_byte_string/: A-B.ASM  COUNT.ASM  PPSTART.ASM  SetCler.ASM  lab8.bdsproj  lab8.bdsproj.local  lab8.dpr  lab8.identcache
ASM/Lab10_string/: Lab10.sln
ASM/Lab11_macros/: PUSHR MACRO LIST.txt
ASM/Tasks/: ЗАДАНИЕ1 СТРОКИ C++.docx  ЛР03.doc  МЗЯ МОДУЛЬ 1 ЛАБОРАТОРНАЯ РАБОТА 01 AFD(1).doc  МЗЯ МОДУЛЬ 1 ЛАБОРАТОРНАЯ РАБОТА 02 CV1.doc  задание МОДУЛЬ2 ЛР1 Turbo Delphi БИТОВЫЕ СТРОКИ.doc
ASM/What is it/: TRANS.asm  file2.asm  lr02.asm  rk.asm
Algorithms/algorithms_0/: algorithms_0.sln
Algorithms/algorithms_1/: algorithms_1.sln
Algorithms/algorithms_2/: algorithms_2.sln
Algorithms/algorithms_3/: algorithms_3.sln
Algorithms/algorithms_4/: main  main.c  (+1 more)
OOP/OOP_LABA_2/: BaseForList.cpp  BaseForList.h  CMakeLists.txt  Iterators.h  MException.h  MyIterator.cpp  MyIterator.h  MyList.cpp  MyList.h  MyList_code.h  Node.cpp  Node.h  base_iterator.h  base_iterator_code.h  iterators_code.h  main.cpp  st.h
(+480 files in other folders)
